objects/Sales_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001bdkPEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_DTP__c</fullName>
        <formula>Sales_Invoice_Payment_Date__c-Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg DTP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_1__c</fullName>
        <label>[Dep]Bill to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_2__c</fullName>
        <label>[Dep]Bill to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <label>[Dep]Bill to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Company_Name__c</fullName>
        <label>[Dep]Bill to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <label>[Dep]Bill to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Name__c</fullName>
        <label>[Dep]Bill to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <label>[Dep]Bill to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <label>[Dep]Bill to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSO__c</fullName>
        <formula>Ship_Date__c - TODAY()</formula>
        <label>DSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Entity__c</fullName>
        <label>Intacct Entity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Sales_Invoice_INV__c</fullName>
        <formula>(&quot;Sales Invoice-&quot;&amp; Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intacct Sales Invoice-INV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>R00N40000001bdk4EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Entity__c</fullName>
        <label>Parent Entity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Payment_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Invoice Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_1__c</fullName>
        <label>[Dep]Ship to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_2__c</fullName>
        <label>[Dep]Ship to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>[Dep]Ship to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company_Name__c</fullName>
        <label>[Dep]Ship to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>[Dep]Ship to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <label>[Dep]Ship to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>[Dep]Ship to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <label>[Dep]Ship to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Invoice</label>
    <nameField>
        <label>Sales Invoice No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>